// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.indicator - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="areas.indicator"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning emotion-1"
      id="areas.indicator"
    >
      <div
        class="ant-spin-dot"
        style="border: 1px solid red; padding: 10px;"
      >
        indicator
      </div>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="default"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning emotion-1"
      id="default"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.delay - value[0] 1`] = `
<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.delay"
>
  <div
    class="ant-spin-container"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.size: large - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.size: large"
>
  <div>
    <div
      class="ant-spin ant-spin-lg ant-spin-spinning emotion-1"
      id="properties.size: large"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.size: small"
>
  <div>
    <div
      class="ant-spin ant-spin-sm ant-spin-spinning emotion-1"
      id="properties.size: small"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.spinning - value[0] 1`] = `
<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.spinning"
>
  <div
    class="ant-spin-container"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.style: border: 5px solid blue - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
  border: 5px solid blue;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.style: border: 5px solid blue"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning emotion-1"
      id="properties.style: border: 5px solid blue"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.tip - value[0] 1`] = `
.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.tip"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning ant-spin-show-text emotion-1"
      id="properties.tip"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
      <div
        class="ant-spin-text"
      >
        Loading spinner
      </div>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.wrapperStyle: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  border: 5px solid blue;
}

.emotion-1 {
  text-align: center;
  width: 100%;
  padding: 80px 0;
}

<div
  class="ant-spin-nested-loading emotion-0"
  id="properties.wrapperStyle: border: 5px solid blue"
>
  <div>
    <div
      class="ant-spin ant-spin-spinning emotion-1"
      id="properties.wrapperStyle: border: 5px solid blue"
    >
      <span
        class="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
        <i
          class="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-spin-container ant-spin-blur"
  >
    <div
      style="border: 1px solid red; padding: 10px;"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema areas.indicator 1`] = `true`;

exports[`Test Schema areas.indicator 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.delay 1`] = `true`;

exports[`Test Schema properties.delay 2`] = `null`;

exports[`Test Schema properties.size: large 1`] = `true`;

exports[`Test Schema properties.size: large 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.spinning 1`] = `true`;

exports[`Test Schema properties.spinning 2`] = `null`;

exports[`Test Schema properties.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.tip 1`] = `true`;

exports[`Test Schema properties.tip 2`] = `null`;

exports[`Test Schema properties.wrapperStyle: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.wrapperStyle: border: 5px solid blue 2`] = `null`;
